syntax = "proto3";

package realworld;

import "google/api/field_behavior.proto";
import "realworld/common.proto";

option go_package = "conduit/pb/realworld";
option java_package = "com.realworld";
option java_outer_classname = "AuthServiceProto";
option java_multiple_files = true;

service AuthService {
  rpc Login (LoginRequest) returns (User) {}
  rpc Signup (SignupRequest) returns (User) {}
}

message LoginRequest {
  string email = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message SignupRequest {
  string username = 1 [(google.api.field_behavior) = REQUIRED];
  string email = 2 [(google.api.field_behavior) = REQUIRED];
  string password = 3 [(google.api.field_behavior) = REQUIRED];
}
