syntax = "proto3";

package realworld;

import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "realworld/common.proto";

option go_package = "conduit/pb/realworld";
option java_package = "com.realworld";
option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

service UserService {
  // Authentication required, returns a User that's the current user
  rpc GetCurrentUser (GetCurrentUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/user"
    };
  }

  // Authentication required, returns the User
  // Accepted fields: email, username, password, image, bio
  rpc UpdateUser (UpdateUserRequest) returns (User) {}

  rpc ToggleFollowUser (ToggleFollowUserRequest) returns (Profile) {}

  rpc GetProfile (GetProfileRequest) returns (Profile) {}
}

message GetCurrentUserRequest {}

message UpdateUserRequest {
  User user = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetProfileRequest {
  string username = 1 [(google.api.field_behavior) = REQUIRED];
}

message ToggleFollowUserRequest {
  string username = 1 [(google.api.field_behavior) = REQUIRED];
}